navigation view works correctly and corrected code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="login_error">Не вірна пара логін-пароль</string>
     <string name="LogOut">Вийти</string>
     <string name="Profile">Профіль</string>
+    <string name="moviename">MovieName</string>
+    <string name="change_format">Change format</string>
 </resources>
