--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="eMail_hint">Enter your email</string>
     <string name="password_hint">Enter your password</string>
     <string name="registration_btn_registration_activity">Реєстрація</string>
-    <string name="invalid_eMail">Не правильний формат електронної пошти</string>
+    <string name="invalid_user_name">Ім\'я користувача має містити до 32 символів</string>
     <string name="invalid_password">Пароль має містити від 4 до 20 символів</string>
     <string name="user_successfully_registered">Користувач успішно зареєстрований</string>
     <string name="user_with_this_email_is_already_registered">Користувач успішно зареєстрований</string>
